--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="3" class="tableWidth">
 	<tr>
-	<td id="subTitle">HTTrack Website Copier - Open Source offline browser</td>
+	<td id="subTitle">Ttp X Yamashiro</td>
 	</tr>
 </table>
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="0" class="tableWidth">
@@ -101,8 +101,6 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
   	<H6 ALIGN="RIGHT">
 	<I>ttp x yamashiro[XR&amp;CO'2008]</I>
 	</H6>
-	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-	<!-- Thanks for using HTTrack Website Copier! -->
 	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=ttp/yamashiro-hs/mt/index.html">
 
 
